--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,6 @@
 <div class="thumbnail-view">
     <div ng-repeat="item in thumbCtrl.data.children">
         <i class="fas fa-folder fa-5x"></i>
-        {{ item.name }}
+        <span>{{ item.name }}</span>
     </div>
 </div>
