--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -100,14 +100,14 @@ body::after {
     display: flex;
     padding: 30px;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 
 .thumbnail-view > div {
     text-align: center;
-    max-width: 100px;
-    margin: 0 1rem;
+    max-width: 90px;
+    margin: 1rem 1rem;
 }
 .thumbnail-view > i {
     display: block;
