--- a/src/templates/assist.html
+++ b/src/templates/assist.html
@@ -1,1 +1,8 @@
-<img class="assist-filler" src="img/radial-tree-filler.png" width="450" height="440" alt="">
+<div ng-controller="AssistController as assistCtrl" class="assist-wrapper">
+<svg></svg>
+<div class="toolbar">
+    <button class="btn btn-default" uib-popover="Hello wrold" popover-trigger="click">+</button>
+    <button class="btn btn-default">-</button>
+    <input type="text" class="form-control" placeholder="Start typing to filter..">
+</div>
+</div>
