--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,6 @@
 <div class="thumbnail-view">
     <div ng-repeat="node in rCtrl.selectedNode.children" ng-click="console.log('clicked')" ng-dblclick="rCtrl.takeAction(node)">
-        <i class="fas fa-5x" ng-class="node.children ? 'fa-folder' : 'fa-file'"></i>
+        <i class="fa fa-5x" ng-class="node.children ? 'fa-folder' : 'fa-file'"></i>
         <span>{{ node.name }}</span>
     </div>
 </div>
