bootstrap changed to 3.3.7 for knowledge cards compatibility

--- a/src/templates/assist.html
+++ b/src/templates/assist.html
@@ -1,7 +1,7 @@
 <div ng-controller="AssistController as assistCtrl" class="assist-wrapper">
 <svg></svg>
 <div class="toolbar">
-    <button class="btn btn-default" uib-popover="Hello wrold" popover-trigger="click">+</button>
+    <button class="btn btn-default" uib-popover="to be implemented. Testing knowlege card popover" popover-trigger="'mouseover'">+</button>
     <button class="btn btn-default">-</button>
     <input type="text" class="form-control" placeholder="Start typing to filter..">
 </div>
