--- a/src/lib/angular-tree-control/css/tree-control.css
+++ b/src/lib/angular-tree-control/css/tree-control.css
@@ -6,7 +6,7 @@ treecontrol {
     -ms-user-select: none;
     user-select: none;
     text-decoration: none;
-    font-size: 0.94rem;
+    /* font-size: 0.94rem; */
 }
 
 treecontrol ul {
