--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,12 +3,6 @@ html, body {
     padding: 0;
 }
 
-body::after {
-    content: "" ;
-    display: table ; /* NOTE: Display "block" does not seem to work with height: 0px. */
-    height: 0px ;
-}
-
 .root-container {
     box-sizing: content-box;
     margin: 0;
@@ -55,7 +49,6 @@ body::after {
     height: 30px;
     flex: 1 1;
     padding: 3px;
-    font-size: 0.9rem;
     border: 1px solid #eee;
     white-space: nowrap; 
     overflow: hidden;
@@ -70,7 +63,6 @@ body::after {
     display: inline-flex;
     align-items: center;
     margin-right: 10px;
-    font-size: 0.9rem;
     border: 1px solid #eee;
 }
 
@@ -107,10 +99,15 @@ body::after {
 .thumbnail-view > div {
     text-align: center;
     max-width: 90px;
-    margin: 1rem 1rem;
+    margin:2rem;
 }
-.thumbnail-view > i {
+.thumbnail-view > div > i {
     display: block;
+}
+
+.thumbnail-view > div > span {
+    display: block;
+    margin-top: 5px;
 }
 
 .assist-filler {
@@ -126,7 +123,6 @@ body::after {
     position: absolute;
     top: 0;
     left: 0;
-    /* background-color: #efefef; */
     width: 100%;
     height: 100%;
 }
@@ -148,13 +144,6 @@ body::after {
 .assist-wrapper > .toolbar > * {
     margin: 2px;
 }
-
-/* SVG CLASSES */
-/* svg {
-    border: 1px solid pink;
-    width: 100%;
-    height: 100%;
-} */
 
 .node text {
     font: 12px sans-serif;
