--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -172,3 +172,28 @@ html, body {
    -ms-user-select: none;
    user-select: none;
  }
+
+
+ /*  CARD CSS */
+
+.modal-title {
+    font-size: 1.6rem;
+    margin-bottom: 10px;
+    text-align: center;
+}
+ .modal-author {
+     border-bottom: 1px solid #eee;
+     padding: 5px 15px;
+     color: #777;
+     font-size: 13px;
+ }
+
+ .modal-extra {
+     font-size: 1.1rem;
+     display: flex;
+     justify-content: space-between;
+ }
+
+ .modal-body {
+     font-size: 1.1rem;
+ }
