files moved to icons folder and updated in card.html

--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -5,7 +5,7 @@
             <div><b>File:</b> {{kCtrl.data.name}}</div>
             <span><b>Modified:</b> {{kCtrl.data.date}}</span>
         </div>
-        <img ng-src="img/{{kCtrl.data.type}}.png" width="70px" height="70px" alt="icon">
+        <img ng-src="img/icons/{{kCtrl.data.type}}.png" width="70px" height="70px" alt="icon">
     </div>
 </div>
 <div class="modal-author"><b style="color:#000">Authors:</b> {{ kCtrl.data.author}}</div>
