path highlighting added

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -161,6 +161,14 @@ html, body {
    stroke-opacity: 0.4;
    stroke-width: 1.5px;
  }
+
+ path.link-highlighted {
+     fill: none;
+     stroke: #d35400;
+     stroke-opacity: 1;
+     stroke-width: 2.5px;
+ }
+
  g.node {
    cursor: pointer;
  }
