--- a/src/templates/assist.html
+++ b/src/templates/assist.html
@@ -1,12 +1,33 @@
-<div ng-controller="AssistController as assistCtrl" class="assist-wrapper">
-    <svg></svg>
-    <div class="toolbar">
-        <button class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Zoom-in">
+<div ng-controller="AssistController as aCtrl" class="assist-wrapper">
+    <svg>
+        <g class="main" ng-attr-transform="translate({{aCtrl.width / 2}}, {{aCtrl.height / 2}})">
+            <g>
+                <path ng-attr-class="link {{ aCtrl.isLinkMatching(item, aCtrl.keywords) ? 'link-highlighted': ''}}" 
+                      ng-attr-d="{{aCtrl.getD(item)}}" 
+                      ng-repeat="item in aCtrl.links"></path>
+                <g ng-attr-transform="{{aCtrl.transformNode(item)}}" 
+                   ng-class="{'node': true, 'node--internal': item.children, 'node--leaf': !item.children, 'active': aCtrl.isActive}"
+                   ng-repeat="item in aCtrl.descendants"
+                   ng-click="aCtrl.onNodeClick(item)"
+                   ng-dblclick="aCtrl.onNodeDblClick(item)">
+                    <image x="0" y="-6" width="14" height="14" 
+                           ng-attr-href="{{aCtrl.getIcon(item)}}"
+                           ng-attr-transform="{{aCtrl.transformImage(item)}}"></image>
+                    <text dy="0.31rem"
+                          ng-attr-x="{{aCtrl.positionTextX(item)}}" 
+                          ng-attr-text-anchor="{{aCtrl.anchorText(item)}}"
+                          ng-attr-transform="{{aCtrl.transformText(item)}}">{{item.data.name}}</text>
+                </g>
+            </g>
+        </g>
+    </svg>
+    <div class="toolbar" uib-popover="Check this out" popover-is-open="true">
+        <!-- <button class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Zoom-in">
             <i class="glyphicon glyphicon-plus"></i>
         </button>
         <button class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Zoom-out">
             <i class="glyphicon glyphicon-minus"></i>
-        </button>
-        <input type="text" class="form-control" placeholder="Start typing to filter..">
+        </button> -->
+        <input type="text" ng-model="aCtrl.keywords" class="form-control" placeholder="Start typing to filter..">
     </div>
 </div>
