path highlighting completed

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -130,7 +130,7 @@ html, body {
 .assist-wrapper > div.toolbar {
     position: absolute;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     bottom: 0;
     left: 0;
     justify-content: space-between;
