--- a/src/templates/assist.html
+++ b/src/templates/assist.html
@@ -1,8 +1,8 @@
 <div ng-controller="AssistController as aCtrl" class="assist-wrapper">
-    <svg>
+    <svg style="font:5px sans-serif">
         <g class="main" ng-attr-transform="translate({{aCtrl.width / 2}}, {{aCtrl.height / 2}})">
             <g>
-                <path ng-attr-class="link {{ aCtrl.isLinkMatching(item, aCtrl.keywords) ? 'link-highlighted': ''}}" 
+                <path ng-attr-class="link {{ item.target.highlighted ? 'link-highlighted': ''}}" 
                       ng-attr-d="{{aCtrl.getD(item)}}" 
                       ng-repeat="item in aCtrl.links"></path>
                 <g ng-attr-transform="{{aCtrl.transformNode(item)}}" 
@@ -11,9 +11,8 @@
                    ng-click="aCtrl.onNodeClick(item)"
                    ng-dblclick="aCtrl.onNodeDblClick(item)">
                     <image x="0" y="-6" width="14" height="14" 
-                           ng-attr-href="{{aCtrl.getIcon(item)}}"
-                           ng-attr-transform="{{aCtrl.transformImage(item)}}"></image>
-                    <text dy="0.31rem"
+                           ng-attr-href="{{aCtrl.getIcon(item)}}"></image>
+                    <text dy="0.31em"
                           ng-attr-x="{{aCtrl.positionTextX(item)}}" 
                           ng-attr-text-anchor="{{aCtrl.anchorText(item)}}"
                           ng-attr-transform="{{aCtrl.transformText(item)}}">{{item.data.name}}</text>
@@ -21,13 +20,14 @@
             </g>
         </g>
     </svg>
-    <div class="toolbar" uib-popover="Check this out" popover-is-open="true">
+    <div class="toolbar" uib-popover="Check this out" popover-is-open="vm.helpModal">
         <!-- <button class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Zoom-in">
             <i class="glyphicon glyphicon-plus"></i>
         </button>
         <button class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Zoom-out">
             <i class="glyphicon glyphicon-minus"></i>
         </button> -->
-        <input type="text" ng-model="aCtrl.keywords" class="form-control" placeholder="Start typing to filter..">
+        <div ng-if="aCtrl.highlighted.length">{{aCtrl.highlighted.length}} files found.</div>
+        <input type="text" ng-model="aCtrl.keywords" ng-change="aCtrl.onKeywordsChange()" class="form-control" placeholder="Start typing to filter..">
     </div>
 </div>
