vscode removed and assist.html updated

--- a/src/templates/assist.html
+++ b/src/templates/assist.html
@@ -27,7 +27,7 @@
         <button class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Zoom-out">
             <i class="glyphicon glyphicon-minus"></i>
         </button> -->
-        <div ng-if="aCtrl.highlighted.length">{{aCtrl.highlighted.length}} files found.</div>
+        <div ng-if="aCtrl.highlighted.length">{{aCtrl.highlighted.length}} files highlighted.</div>
         <input type="text" ng-model="aCtrl.keywords" ng-change="aCtrl.onKeywordsChange()" class="form-control" placeholder="Start typing to filter..">
     </div>
 </div>
