--- a/src/templates/assist.html
+++ b/src/templates/assist.html
@@ -6,10 +6,12 @@
                       ng-attr-d="{{aCtrl.getD(item)}}" 
                       ng-repeat="item in aCtrl.links"></path>
                 <g ng-attr-transform="{{aCtrl.transformNode(item)}}" 
-                   ng-class="{'node': true, 'node--internal': item.children, 'node--leaf': !item.children, 'active': aCtrl.isActive}"
+                   ng-class="{'node': true, 'node--internal': item.children, 'node--leaf': !item.children, 'active': item.active}"
                    ng-repeat="item in aCtrl.descendants"
                    ng-click="aCtrl.onNodeClick(item)"
-                   ng-dblclick="aCtrl.onNodeDblClick(item)">
+                   ng-dblclick="aCtrl.onNodeDblClick(item)"
+                   ng-mouseover="aCtrl.onNodeMouseOver(item)"
+                   ng-mouseout="aCtrl.onNodeMouseOut(item)">
                     <image x="0" y="-6" width="14" height="14" 
                            ng-attr-href="{{aCtrl.getIcon(item)}}"></image>
                     <text dy="0.31em"
